# AIC2026-multimodal-detection

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  architecture.md  pretext.md  pyproject.toml  requirements.txt  setup_linux.sh
configs/: aic_baseline.yaml  aic_triplet.yaml
src/aic2026/: __init__.py  data.py  quality.py
src/aic2026/configs/: baseline.yaml
src/aic2026/models/: triplet_net.py
src/aic2026/scripts/: predict.py  predict.sh  train_baseline.sh  train_triplet.sh
